# strongswan

./: configure.ac
conf/: Makefile.am
conf/plugins/: json.opt
src/libcharon/: Makefile.am
src/libcharon/plugins/connmark/: connmark_listener.c
src/libcharon/plugins/json/: Makefile.am  json_config.c  json_config.h  json_plugin.c  json_plugin.h
src/libcharon/plugins/sql/: sql_config.c  sql_cred.c
src/libcharon/sa/ikev2/tasks/: ike_auth.c
src/libstrongswan/plugins/mysql/: mysql_database.c
